fix home page alignment and spacing

--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,3 @@
-
-
 .list-group-item {
     padding: 1rem 1.6rem;
     display: flex;
@@ -10,7 +8,35 @@
 #recipes {
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 50vh;
+    height: 40vh;
     margin: 1em 0;
     border: 2px solid black;
 }
+
+.header__titles {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.search-area {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#search-text {
+    border: 1px solid black;
+    margin: 1rem 1rem 1rem 0;
+    padding: 6px;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+}
+
+.empty-message {
+    display: flex;
+    justify-content: center;
+    padding: 6px;
+}
+
+
